--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,9 @@
 
  <button [routerLink]="['/add']">Ajouter un produit</button>
-<!-- <div class="container">
-    <div>
-      <ul>
-        <li *ngFor="let produit of productsToDisplay">{{ produit.nom }}</li>
-      </ul>
-    </div>
-  </div> -->
 
 
-  <!-- <table class="liste_produits">
+
+  <table class="liste_produits">
     <tr>
         <th>#</th>
         <th>Nom</th>
@@ -23,7 +17,7 @@
         <td>{{produit.nom}}</td>
         <td>{{produit.prix}}</td>
         <td>{{produit.quantite}}</td>
-        <td><button [routerLink]="'/editer_produit/'+produit.id">Editer</button><button (click)="delete(produit.id)">Supprimer</button></td>
+        <!-- <td><button [routerLink]="'/editer_produit/'+produit.id">Editer</button><button (click)="delete(produit.id)">Supprimer</button></td> -->
     </tr>
-</table> -->
+</table>
 
