ok pour crud sauf update

--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,1 +1,2 @@
-<p>delete works!</p>
+<p>Souhaitez vous supprimer le produit :{{ produit.nom }}</p>
+<button type="button" (click)="onDelete()">Oui</button><button type="button" routerLink="/home">Non</button>
