--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,10 +23,18 @@
 
     </tr>
 </table> -->
+<button class="btn-blue" [routerLink]="['/add']">Ajouter un produit</button>
 
-<p>Modification</p>
+
+
+
 <div class="container">
 <table class="table">
+  <style>
+    thead tr th {
+        border-bottom: 2px solid black; /* Épaisseur et couleur de la bordure */
+    }
+</style>
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -43,7 +51,7 @@
             <td>{{produit.prix}}</td>
             <td>{{produit.quantite}}</td>
             <td>
-              <td><button type="button" routerLink="/change,produit.id]">EDITER</button><button type="button" [routerLink]="['/delete/',produit.id]" >Supprimer</button></td >
+              <td><button class="btn-blue" type="button" [routerLink]="['/change', produit.id]">EDITER</button><button class="btn-red" type="button" [routerLink]="['/delete/', produit.id]">Supprimer</button></td >
 <!-- <button routerLink="/update"    type="button"  class="btn btn-primary" (click)="modifierProduit(produit.id)" >
    <i class="fa fa-trash" aria-hidden="true"></i> Modifier
 </button>
@@ -51,7 +59,7 @@
     <i class="fa fa-trash" aria-hidden="true"></i> Supprimer
 </button> -->
 
-            
+
 
         </tr>
 
