--- a/src/app/change/change.component.html
+++ b/src/app/change/change.component.html
@@ -22,3 +22,4 @@
       <option *ngFor="let category of categories" [value]="category.id">{{category.nom}}</option>
     </select>
   </div>
+  <button type="submit">Mettre à jour</button>
